# protoduck

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  description.yml  test_extension.py
.github/workflows/: MainDistributionPipeline.yml  rust-quality.yml
scripts/: append_metadata.py  run_test.py
src/: descriptor_pool.rs  error.rs  lib.rs  type_mapping.rs
test/sql/: protoduck.test
