[package]
name = "protoduck"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension for deserializing Protocol Buffer messages stored in columns"
license = "MIT"
repository = "https://github.com/fcsnk/protoduck"

[lib]
crate-type = ["cdylib"]
name = "protoduck"

[dependencies]
# DuckDB loadable extension support
duckdb = { version = "=1.4.3", features = ["vtab-loadable", "vscalar", "vscalar-arrow"] }
duckdb-loadable-macros = "=0.1.13"
libduckdb-sys = { version = "=1.4.3", features = ["loadable-extension"] }

# Arrow for working with data
arrow = { version = "56", default-features = false, features = ["ffi"] }

# Protobuf support with reflection
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde", "text-format"] }

# For parsing .proto files at runtime
protox = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding for bytes fields
base64 = "0.22"

# Error handling
thiserror = "2.0"

# Thread-safe global state for descriptor pool
once_cell = "1.20"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
strip = true
