[package]
name = "protoduck"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension for deserializing Protocol Buffer messages stored in columns"
license = "MIT"
repository = "https://github.com/fcsnk/protoduck"

[lib]
crate-type = ["cdylib"]
name = "protoduck"

[dependencies]
duckdb = { version = "=1.10502.0", features = ["loadable-extension", "vscalar", "vscalar-arrow"] }
libduckdb-sys = { version = "=1.10502.0", features = ["loadable-extension"] }


prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde", "text-format"] }

protox = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.22"

thiserror = "2.0"

parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
strip = true
